--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "components/ESP32-A2DP"]
 	path = components/ESP32-A2DP
-	url = https://github.com/julienchavas/ESP32-A2D
+	url = https://github.com/julienchavas/ESP32-A2D.git
